--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
+    "@react-navigation/stack": "^6.3.19",
+    "@shopify/flash-list": "1.4.3",
     "@supabase/supabase-js": "^2.39.0",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
     "react-native-url-polyfill": "^2.0.0",
-    "@shopify/flash-list": "1.4.3"
+    "react-native-web": "~0.19.6",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
